--- a/.github/workflows/tests-all.yml
+++ b/.github/workflows/tests-all.yml
@@ -24,6 +24,8 @@ jobs:
     name: ${{ matrix.smalltalk }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+        with:
+         fetch-depth: '0'
       - name: Setup smalltalkCI
         uses: hpi-swa/setup-smalltalkCI@v1
         with:
